# termik

./: .gitignore  README.md  settings.gradle  settings.vim
app/: CMakeLists.txt  build.gradle  download.gradle
app/src/androidTest/java/uk/co/mishurov/catdetector/: ExampleInstrumentedTest.java
app/src/androidTest/java/uk/co/mishurov/termik2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  obb_mount.cpp  processing.cc
app/src/main/java/org/tensorflow/classifier/: Classifier.java  ImageUtils.java  Logger.java  TensorFlowImageClassifier.java
app/src/main/java/org/tensorflow/demo/: Logger.java  TensorFlowImageClassifier.java
app/src/main/java/uk/co/mishurov/catdetector/: MainActivity.java
app/src/main/java/uk/co/mishurov/termik/: AlarmReceiver.java  AssetDownloaderService.java  ClippingTextView.java  DownloaderService.java  DownloaderServiceBroadcastReceiver.java  GlShader.kt  GlUtil.kt  GvrRenderer.kt  JavaCameraView.java  KotlinCameraView.kt  MainActivity.java  MainActivity.kt  ProgressActivity.java  ResultsView.java  ResultsView.kt  SettingsActivity.kt  TermView.java
app/src/main/java/uk/co/mishurov/termik2/: AlarmReceiver.java  AssetDownloaderService.java  GlShader.kt  GlUtil.kt  GvrRenderer.kt  JavaCameraView.java  KotlinCameraView.kt  MainActivity.java  MainActivity.kt  ProgressActivity.java  ResultsView.java  ResultsView.kt  SettingsActivity.kt
app/src/main/java/uk/co/mishurov/termik2/opencv/: JavaCameraView.java
app/src/main/jni/: obb_mount.cpp  processing.cpp
app/src/main/res/layout/: activity_main.xml  activity_progress.xml
app/src/main/res/values/: array.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/uk/co/mishurov/catdetector/: ExampleUnitTest.java
app/src/test/java/uk/co/mishurov/termik2/: ExampleUnitTest.kt
downloader/: build.gradle  proguard-rules.pro
gen-libs/: CMakeLists.txt  build.gradle  download_fortran.sh
gen-libs/src/main/cpp/openblas/: CMakeLists.txt
gen-libs/src/main/cpp/opencv/: CMakeLists.txt
gen-libs/src/main/cpp/tensorflow/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
licensing/: build.gradle
openCVLibrary320/: build.gradle
opencv/: build.gradle
resources/: convert.sh
tensorflow/: build.gradle
tensorflow/src/main/java/org/tensorflow/demo/: Classifier.java  ImageUtils.java  TensorFlowImageClassifier.java
